# KUL_Notarius

./: .gitignore  README.md  pyproject.toml  pytest.ini  workspace.yml
caches/LLMCache/gemma-3-27b-it-Q4_K_M/: cache.db
caches/LLMCache/google_gemini-2.5-flash-preview-09-2025/: cache.db
caches/LLMCache_OLD/cogito-v2-preview-llama-109b-moe/: cache.db
caches/LLMCache_OLD/gemini-2/: cache.db
caches/LLMCache_OLD/gemma-3-27b-it-qat/: cache.db
caches/LLMCache_OLD/google_gemini-2.5-flash-preview-09-2025/: cache.db
caches/LLMCache_OLD/google_gemma-3-27b-it/: cache.db
caches/LLMCache_OLD/gpt-4-vision-preview/: cache.db
caches/LLMCache_OLD/gpt-4o/: cache.db
caches/LLMCache_OLD/gpt-5/: cache.db
caches/LLMCache_OLD/grok-4-fast:free/: cache.db
caches/LLMCache_OLD/internvl3-78b/: cache.db
caches/LLMCache_OLD/o3/: cache.db
caches/LLMCache_OLD/openai_gpt-4o/: cache.db
caches/LLMCache_OLD/qwen3-vl-235b-a22b-instruct/: cache.db
configs/dataset/: base_huggingface_config.yaml
configs/dataset/evaluation/: backup.yaml
configs/dataset/generation/: base_schematism_dataset_config.yaml  default.yaml
configs/ml_models/llm/: backup.yaml  default.yaml  evaluation_config.yaml  llm_model_config.yaml  tests_llm_config.yaml  wandb.yaml
configs/ml_models/lmv3/: config.yaml  default.yaml  lmv3_model_config.yaml  tests_lmv3_config.yaml
configs/ml_models/ocr/: ocr_model_config.yaml
configs/models/llm/: llm_model_config.yaml
data/csv/: slownik_wezwan.csv
data/mappings/: deanery.json  dedication.json  dedication_bak.json  latin_extendings.json
notebooks/: labelstudio_client.ipynb  llm_annotating.ipynb  mappings_eda.ipynb  mappings_update.ipynb  mappings_update_fixed.ipynb
scripts/: add_source_dataset_to_hf_dataset.py  cut_images.py  download_samples.py  enrich_dataset_example.py  generate_default_configs.py  generate_hf_parsed_dataset.py  inference.py  train.py  update_hf_with_source.py
src/core/caches/: base_cache.py  lmv3_cache.py  ocr_cache.py  utils.py
src/core/config/: constants.py  helpers.py  manager.py  registry.py
src/core/data/: filters.py  maps.py  metrics.py  parsing.py  schematism_parser.py  translation_parser.py  utils.py  visualize.py  wrapper.py
src/core/models/: base.py
src/core/pipeline/: pipeline.py
src/core/utils/: console.py  logging.py  mapping_utils.py  shared.py  utils.py  wandb_eval.py  wandb_utils.py
src/notarius/: config.py
src/notarius/application/: types.py
src/notarius/domain/: exceptions.py  protocols.py
src/notarius/orchestration/: constants.py  definitions.py  dill_io_manager.py  operations.py  resources.py  utils.py
src/notarius/shared/: constants.py  logger.py
src/notarius/training/: helpers.py  losses.py  metrics.py  trainers.py
src/orchestration/: constants.py  definitions.py  resources.py
src/orchestration/assets/: configs.py  export.py  ingest.py  models.py  postprocess.py  predict.py  transform.py
src/orchestration/configs/: exporting_config.py  ingestion_config.py  models_config.py  postprocessing_config.py  prediction_config.py  references_config.py  shared.py  transformation_config.py
src/orchestration/jobs/: complete_pipeline.py  exporting.py  ingestion.py  postprocessing.py  prediction.py
src/scripts/: add_source_dataset_to_hf_dataset.py  cut_images.py  download_samples.py  evaluate.py  generate_default_configs.py  generate_hf_parsed_dataset.py  generate_source_dataset.py  inference.py  train.py
tests/: conftest.py  test_fixtures.py
tests/integration/: __init__.py
(+269 files in other folders)
