[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notarius"
version = "0.1.0"
description = "Historical Schematism Indexing & Extraction Engine"
authors = [
    {name = "Artur Podsiadły", email = "artpods56@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "accelerate",
    "hydra-core",
    "structlog",
    "rich",
    "diskcache==5.6.3",
    "geopandas",
    "jinja2",
    "mistralai",
    "omegaconf",
    "openai",
    "pillow",
    "pydantic",
    "pytesseract",
    "python-dotenv",
    "pyyaml",
    "rapidfuzz",
    "shapely",
    "streamlit",
    "openpyxl",
    "thefuzz",
    "tqdm",
    "typing_extensions",
    "lingua-language-detector>=2.0.0",
    "pymupdf",
    "psycopg2-binary>=2.9.10",
    "beartype>=0.21.0",
    "sqlalchemy>=2.0.43",
    "pytest>=8.4.2",
    "respx>=0.22.0",
    "llama-cpp-python>=0.3.16",
    "black>=25.9.0",
    "dagster>=1.11.15",
    "dagster-webserver>=1.11.15",
    "datasets>=4.2.0",
    "pyodbc>=5.3.0",
    "reportlab>=4.4.4",
    "polars>=1.34.0",
    "wandb>=0.22.2",
    "wandb-workspaces>=0.1.19",
    "notebook>=7.4.7",
    "scipy>=1.16.3",
    "ruff>=0.14.6",
    "stubs>=1.0.0",
    "scipy-stubs>=1.16.3.1",
    "evaluate>=0.4.6",
    "pydantic-settings>=2.12.0",
    "dill>=0.4.0",
    "weave>=0.52.22",
    "typer>=0.20.0",
    "pdfplumber>=0.11.7",
]

[project.optional-dependencies]
# Used for language detection in the pipeline
lingua = [
    "lingua-language-detector>=2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.dagster]
module_name = "notarius.orchestration.defs.dev"
code_location_name = "notarius"


[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
